Add new body text and pictures

--- a/index.html
+++ b/index.html
@@ -9,31 +9,31 @@
     <link href="./css/style.css" rel="stylesheet"/>
 </head>
 <body>
-   
+   <h3> OUTLET CENTER</h3>
     <section class="products py-5">
         <div class="container">
             
             <div class="row">
                 <div class="col-lg-3">
-                    <h2>Brands</h2>
+                    <h2>Types</h2>
                     <div class="list-group flex-row-sm flex-row-md ">
-                        <a class="list-group-item list-group-item-action">Ralph Lauren</a>
-                        <a class="list-group-item list-group-item-action">Balenciaga</a>
-                        <a class="list-group-item list-group-item-action">Celine</a>
+                        <a class="list-group-item list-group-item-action">Woman</a>
+                        <a class="list-group-item list-group-item-action">Man</a>
+                        <a class="list-group-item list-group-item-action">Kids</a>
                     </div>
                 </div>
     
                 <div class="col-lg-9">
-                    <h2>New Arrivals
+                    <h2> Brand New Arrivals
                     </h2>
                 <div class="row">
                     <div class="col-sm-6 d-lg-none d-xl-block col-xl-3">
                         <div class="card">
                             <div class="card-image">
-                                <img class="card-img-top" src="https://images.pexels.com/photos/2235071/pexels-photo-2235071.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=300&w=600">
+                                <img class="card-img-top" src="https://images.pexels.com/photos/6041624/pexels-photo-6041624.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940">
                             </div>
                             <div class="card-body">
-                            <h5>Add to card</h5>
+                            <h5>Zara</h5>
                                 <a class="btn btn-light">Add to card</a>
                             </div>
                         </div>
@@ -41,10 +41,10 @@
                 <div class="col-sm-6 col-lg-4 col-xl-3">
                      <div class="card">
                     <div class="card-image">
-                        <img class="card-img-top" src="https://images.pexels.com/photos/2235071/pexels-photo-2235071.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=300&w=600">
+                        <img class="card-img-top" src="https://images.pexels.com/photos/7246441/pexels-photo-7246441.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940">
                     </div>
                     <div class="card-body">
-                        <h5>Rose Dress</h5>
+                        <h5>Celine</h5>
                         <a class="btn btn-light">Add to card</a>
                     </div>
                     </div>
@@ -52,10 +52,10 @@
                 <div class="col-sm-6 col-lg-4 col-xl-3">
                     <div class="card">
                     <div class="card-image">
-                        <img class="card-img-top" src="https://images.pexels.com/photos/2235071/pexels-photo-2235071.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=300&w=600">
+                        <img class="card-img-top" src="https://images.pexels.com/photos/7615247/pexels-photo-7615247.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500">
                     </div>
                     <div class="card-body">
-                        <h5>Rose Dress</h5>
+                        <h5>Balenciaga</h5>
                         <a class="btn btn-light">Add to card</a>
                     </div>
                     </div>
@@ -63,10 +63,10 @@
             <div class="col-sm-6 col-lg-4 col-xl-3">
                      <div class="card">
                     <div class="card-image">
-                        <img class="card-img-top" src="https://images.pexels.com/photos/2235071/pexels-photo-2235071.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=300&w=600">
+                        <img class="card-img-top" src="https://images.pexels.com/photos/8050084/pexels-photo-8050084.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940">
                     </div>
                     <div class="card-body">
-                        <h5>Rose Dress</h5>
+                        <h5>Ralph Lauren</h5>
                         <a class="btn btn-light">Add to card</a>
                     </div>
                     </div>
@@ -81,45 +81,45 @@
                 <div class="row">
                      <div class="col-md-6">
                         <div class="card-mb-3 d-flex align-self-center d-flex justify-content-center">
-                            <img class="card-img-top" src="https://images.pexels.com/photos/2235071/pexels-photo-2235071.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=300&w=600">
+                            <img class="card-img-top" src="https://images.pexels.com/photos/5561460/pexels-photo-5561460.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260">
                             <div class="card-body position-absolute">
-                                <h5>Mix</h5>
+                                <h5>KIDS -30% SALE</h5>
                                 <a class="btn btn-light">Add to card</a>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="card-mb-3 d-flex align-self-center d-flex justify-content-center">
-                            <img class="card-img-top" src="https://images.pexels.com/photos/2235071/pexels-photo-2235071.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=300&w=600">
+                            <img class="card-img-top" src="https://images.pexels.com/photos/6140170/pexels-photo-6140170.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260">
                             <div class="card-body position-absolute ">
-                                <h5>Mix</h5>
+                                <h5>WOMAN -20% SALE</h5>
                                 <a class="btn btn-light">Add to card</a>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="card-mb-3 d-flex  align-self-center d-flex justify-content-center">
-                            <img class="card-img-top" src="https://images.pexels.com/photos/2235071/pexels-photo-2235071.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=300&w=600">
+                            <img class="card-img-top" src="https://images.pexels.com/photos/2229712/pexels-photo-2229712.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940">
                             <div class="card-body position-absolute ">
-                                <h5>Mix</h5>
+                                <h5>Monday Jacket -10 % SALE</h5>
                                 <a class="btn btn-light">Add to card</a>
                             </div> 
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="card-mb-3 d-flex  align-self-center d-flex justify-content-center">
-                            <img class="card-img-top" src="https://images.pexels.com/photos/2235071/pexels-photo-2235071.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=300&w=600">
+                            <img class="card-img-top" src="https://images.pexels.com/photos/61120/pexels-photo-61120.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500">
                             <div class="card-body position-absolute ">
-                                <h5>Mix</h5>
+                                <h5>Wednesday Jeans -15% SALE</h5>
                                 <a class="btn btn-light">Add to card</a>
                             </div> 
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="card-mb-3 d-flex  align-self-center d-flex justify-content-center">
-                            <img class="card-img-top" src="https://images.pexels.com/photos/2235071/pexels-photo-2235071.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=300&w=600">
+                            <img class="card-img-top" src="https://images.pexels.com/photos/10198198/pexels-photo-10198198.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500">
                             <div class="card-body position-absolute ">
-                                <h5>Mix</h5>
+                                <h5>Friday Shirts -10% SALE</h5>
                                 <a class="btn btn-light">Add to card</a>
                             </div> 
                         </div>
