--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="./css/style.css" rel="stylesheet">
 </head>
 <body>
+<h2>Fashion Store</h2>    
         <section class="products py-5">
             <div class="container">
                 <div class="row">
@@ -22,7 +23,6 @@
                     </div>
                     <div class="col-lg-9">
                     <h2> Brand New Arrivals</h2>
-                </div>
                 <div class="row">
                     <div class="col-sm-6 d-lg-none d-xl-block col-xl-3">
                         <div class="card">
